let's not blame websockets for safari's issues

--- a/web/css/couchplay.css
+++ b/web/css/couchplay.css
@@ -5,6 +5,7 @@ html, body {
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
+    touch-action: manipulation;
 }
 
 h1 {
